test/corpus/accessop.test
==========
Method call on dotted identifier
==========
x.y.z()
---

(program
  (expression_statement
    (method_invocation
      object: (field_access
        object: (identifier)
        field: (identifier))
      name: (identifier)
      arguments: (argument_list))))
